# aura_search

./: .gitignore  Cargo.toml  readme.md  zynsearch.config.json
crates/zynsearch-cli/src/: main.rs
crates/zynsearch-core/src/: api.rs  config.rs  engine.rs  index.rs  ingestion.rs  lib.rs  query_pipeline.rs  searcher.rs  top_k.rs
crates/zynsearch-server/: Cargo.toml  build.rs
crates/zynsearch-server/src/: http.rs  main.rs
docs/: todo.md
proto/: README.md  buf.gen.yaml  buf.yaml
proto/zynsearch/v1/: zynsearch.proto
sdks/zynsearch-js/: package-lock.json  package.json  tsconfig.json
sdks/zynsearch-js/src/: client.ts
src/: analyzer.rs  boolean_query.rs  config.rs  crawler.rs  ingestion.rs  lib.rs  main.rs  memtable.rs  parser.rs  positional_queries.rs  sc_ga.rs  segment.rs  sharding.rs  top_k.rs  wire_framing.rs
